# MiAirX

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config-example.json  docker-compose.yml  pyproject.toml  start.bat  start.py
.github/workflows/: ci.yml  docker.yml
docs/: ARCHITECTURE.md  COMPLETE.md  OPTIMIZATION.md  PROJECT_HANDOVER.md  REWRITE_LOG.md  SIMPLE.md
src/miairx/: __init__.py  __main__.py  app.py  cli.py  const.py
src/miairx/auth/: __init__.py  cookie.py  errors.py  manager.py
src/miairx/config/: __init__.py  discovery.py  models.py  store.py
src/miairx/core/: __init__.py  errors.py  lifecycle.py  logging.py  retry.py
src/miairx/media/: __init__.py  buffer.py  formats.py  proxy.py  transcoder.py
src/miairx/protocols/airplay/: __init__.py  audio.py  crypto.py  mdns.py  server.py  speaker_airplay.py
src/miairx/protocols/airplay/pairing/: __init__.py
src/miairx/protocols/dlna/: __init__.py  eventing.py  renderer.py  seek.py  server.py  soap.py  ssdp.py  templates.py
src/miairx/speaker/: __init__.py  controller.py  manager.py  retry.py
src/miairx/web/: __init__.py  app.py
src/miairx/web/static/: index.html
tests/: conftest.py  test_ssdp.py
tests/integration/: test_integration.py
tests/unit/: test_auth.py  test_config.py  test_config_store.py  test_dlna_renderer.py  test_formats.py  test_retry.py  test_soap.py  test_speaker_controller.py
